Add function to compute lifted edges from rag and set of offsets

--- a/src/python/lib/graph/rag/CMakeLists.txt
+++ b/src/python/lib/graph/rag/CMakeLists.txt
@@ -14,6 +14,7 @@ addPythonModule(
         accumulate_flat.cxx
         grid_rag_coordinates.cxx
         accumulate_affinities.cxx
+        get_lifted_edges_from_rag_and_offsets.cxx
     LIBRRARIES
         ${HDF5_LIBRARIES} 
         ${FASTFILTERS_LIBRARY}
